--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,30 @@
 {% extends "base.html" %}
 
 {% block content %}
-{{ additional }}
+
+<form>
+  <div class="form-group row">
+    <label for="group_id" class="col-sm-2 col-form-label">ID:</label>
+    <div class="col-sm-10">
+      <input type="text" readonly class="form-control-plaintext" id="group_id" value="{{ client_settings['id'] }}">
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="token" class="col-sm-2 col-form-label">TOKEN:</label>
+    <div class="col-sm-10">
+      <input type="text" readonly class="form-control-plaintext" id="token" value="{{ client_settings['token'] }}">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="errors">ERRORS:</label>
+    <select multiple class="form-control" id="errors">
+        {% for error in client_settings["errors"] %}
+        <option>error</option>
+        {% endfor %}
+
+    </select>
+  </div>
+</form>
+
 {% endblock %}
